Real time stats, allow users to see GUI option
